<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/rate_frequency"
        style="@color/aps_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/welcometitle"
        android:text="@string/welcometitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/aps_gray" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wparagraph1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/aps_gray" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/wparagraph2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/aps_gray" />

</LinearLayout>