<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/aps_green" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="462dp"
        android:orientation="vertical"
        android:padding="10dip" >

        <!--  View Title Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:gravity="center"
            android:text="AgentPitStop "
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            android:textColor="@color/apslight_green"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:typeface="sans" />

        <!--  Email Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Username" />
        <!--  Email TextField -->
        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
         
        <!--  Password Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/Password" />
        <!--  Password TextField -->
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true" />
         
        <!--  Error message -->
        <TextView android:id="@+id/login_error"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#e30000"
                    android:padding="10dip"
                    android:textStyle="bold"/>
 
        <!--  Login Button -->       
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="Login" />
 
        <!--  Link to Registration Screen -->
        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/Register"
            android:textColor="#21dbd4"
            android:textStyle="bold" />
    </LinearLayout>
 
</ScrollView>

